// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders border correctly when specified as an option 1`] = `
.emotion-0 {
  border: 0.5px solid #babdbe;
  width: 100%;
  border-radius: 4px;
}

<div
  class="figure"
  style="width:700px"
>
  <img
    alt="/images/firstcluster.png"
    class="   emotion-0"
    src="/images/firstcluster.png"
  />
</div>
`;

exports[`renders correctly 1`] = `
<div
  class="figure"
  style="width:700px"
>
  <img
    alt="/images/firstcluster.png"
    class="   css-0"
    src="/images/firstcluster.png"
  />
</div>
`;

exports[`renders lightbox correctly when specified as an option 1`] = `
<div
  class="figure lightbox"
  style="width:700px"
>
  <div
    class="lightbox__imageWrapper"
    role="button"
    tabindex="-1"
  >
    <img
      alt="/images/firstcluster.png"
      class="   emotion-0"
      src="/images/firstcluster.png"
    />
    <div
      class="lightbox__caption"
    >
      click to enlarge
    </div>
  </div>
</div>
`;
